# voxio

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  TECHNICAL_SOLUTION.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: install-whisper-model.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/modules/: asr.rs  audio.rs  hotkey.rs  injector.rs  mod.rs
