[package]
name = "voxio"
version = "0.1.0"
description = "Open-source voice typing for desktop"
authors = ["lever"]
edition = "2021"

[lib]
name = "voxio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
arboard = "3.6.1"
cpal = "0.16.0"
dirs = "6.0.0"
enigo = "0.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.1"
